<resources>
    <string name="app_name">BattleShip</string>
    <string name="my_grid">My grid</string>
    <string name="welcome_to_battleship">Welcome to BattleShip!</string>
    <string name="launch_a_new_game">Launch a new game</string>
    <string name="welcome_text">Welcome to BattleShip. Choose a tile to target</string>
    <string name="choose_language">Choose language</string>
    <string name="rotate">Rotate</string>
    <string name="set_boat">Confirm</string>
    <string name="begin_a_new_game">Begin a new Game</string>
    <string name="set_boat_1">\"The last boat is \"</string>
    <string name="set_boat_2">\" and has \"</string>
    <string name="set_boat_3">\" tiles. Choose where to put it.\"</string>
    <string name="set_boat_4">\"Next boat is \"</string>
</resources>