<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_text"
        style="@style/wide_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_battleship"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/begin_game"
        style="@style/wide_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_a_new_game"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_text" />

    <Button
        android:id="@+id/launch_game"
        style="@style/wide_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_a_new_game"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/begin_game" />

    <Button
        android:id="@+id/change_language"
        style="@style/wide_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="chooseLanguage"
        android:text="@string/choose_language"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

