<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".model.SetBoatsActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/title"
        style="@style/wide_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:text="@string/my_grid"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Grid -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/set_boats_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="5"
        android:padding="0dp" />

    <!-- Bottom Part -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="4"
        android:orientation="horizontal">

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/rotate_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:onClick="rotate"
                android:text="@string/rotate"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/set_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:onClick="setBoat"
                android:text="@string/set_boat"
                android:textSize="16sp" />


        </LinearLayout>

        <!-- Instructions -->
        <TextView
            android:id="@+id/instructions_text_set"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:textSize="24sp" />

    </LinearLayout>
</LinearLayout>
